# lv-namedays

./: LICENSE  MANIFEST.in  README.md  nameday.py  pyproject.toml
data/: README.md  tradic_vardadienu_saraksts.xlsx
scripts/: README.md  convert_paplasinatais_saraksts.py  generate_ics.py  latvian_namedays.ics  tradic_vardadienu_saraksts.csv
src/lv_namedays/: cli.py  nameday.py
src/lv_namedays/data/: paplasinatais_saraksts.json
src/nameday/: nameday.py
test/: test_nameday.py
tests/: conftest.py  test_cli.py  test_nameday.py
