[project]
name = "lv-namedays"
version = "0.1.0"
description = "A CLI tool and a library for Latvian name day lookup"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Uldis BojÄrs"}]
requires-python = ">=3.12"
keywords = ["Latvian", "name days", "nameday", "CLI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = ["pandas", "openpyxl", "click"]

[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[project.scripts]
nameday = "lv_namedays.nameday:main" 

[tool.setuptools.package-data]
nameday = ["data/*.json"]
